--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,43 @@
+@article{maravall86,
+ ISSN = {01621459},
+ URL = {http://www.jstor.org/stable/2289005},
+ abstract = {The problem of decomposing an observed series, assumed to follow an ARIMA process, into signal plus noise is considered. It is well known that the preliminary estimates of the signal will be subject to revisions as more data become available. For a general ARIMA process, the revision in the concurrent estimate of the signal is seen to follow a stationary ARMA process, easily derived from the overall series model. The results are extended to nonconcurrent preliminary estimates. Finally, it is found that, except for a scale factor, the revisions are the same for all admissible decompositions and the canonical decomposition maximizes the variance of the revision.},
+ author = {Agustin Maravall},
+ journal = {Journal of the American Statistical Association},
+ number = {395},
+ pages = {736--740},
+ publisher = {[American Statistical Association, Taylor & Francis, Ltd.]},
+ title = {Revisions in ARIMA Signal Extraction},
+ urldate = {2023-02-09},
+ volume = {81},
+ year = {1986}
+}
+
+@article{hillmer82,
+ ISSN = {01621459},
+ URL = {http://www.jstor.org/stable/2287770},
+ abstract = {This article proposes a model-based procedure to decompose a time series uniquely into mutually independent additive seasonal, trend, and irregular noise components. The series is assumed to follow the Gaussian ARIMA model. Properties of the procedure are discussed and an actual example is given.},
+ author = {S. C. Hillmer and G. C. Tiao},
+ journal = {Journal of the American Statistical Association},
+ number = {377},
+ pages = {63--70},
+ publisher = {[American Statistical Association, Taylor & Francis, Ltd.]},
+ title = {An ARIMA-Model-Based Approach to Seasonal Adjustment},
+ urldate = {2023-02-09},
+ volume = {77},
+ year = {1982}
+}
+
+@article{cleveland76,
+  title={Decomposition of seasonal time series: a model for the census X-11 program},
+  author={Cleveland, William P and Tiao, George C},
+  journal={Journal of the American statistical Association},
+  volume={71},
+  number={355},
+  pages={581--587},
+  year={1976},
+  publisher={Taylor \& Francis}
+}
 
 @manual{ONS07,
   title =        {Guide to Seasonal Adjustment with X-12-ARIMA},
