--- a/24-x11.qmd
+++ b/24-x11.qmd
@@ -214,8 +214,8 @@ To understand the length of a filter let's look at the (finite) number of choice
 find_seasonal_PxQ_filter_wts = function(P, Q) {
   v = rep(0, 100)
   v[50] = 1
-  v2 = filter(v, rep(1 / Q, Q), sides = 2)
-  v3 = filter(v2, rep(1 / P, P), sides = 2)
+  v2 = stats::filter(v, rep(1 / Q, Q), sides = 2)
+  v3 = stats::filter(v2, rep(1 / P, P), sides = 2)
   wts = v3[v3 > 0 & !is.na(v3)]
   wts
 }
